First changes to the website to achive a fully functional ecommerce

--- a/cart.html
+++ b/cart.html
@@ -1,141 +1,153 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-    <title>zFashion - cart</title>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
-      integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <nav id="header">
-      <a href="#"><div class="logo"></div></a>
-      <div>
-        <ul id="navbar">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="shop.html">Shop</a></li>
-          <li><a href="blog.html">Blog</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="contact.html">Contact</a></li>
-          <li id="lg-bag">
-            <a class="active" href="cart.html"
-              ><i class="fa-solid fa-bag-shopping"></i
-            ></a>
-          </li>
-          <a href="#" id="close"><i class="fas fa-times"></i></a>
-        </ul>
-      </div>
-      <div id="mobile">
-        <a href="cart.html"><i class="fa-solid fa-bag-shopping"></i></a>
-        <i id="bar" class="fas fa-outdent"></i>
-      </div>
-    </nav>
+   <head>
+      <meta charset="UTF-8" />
+      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <link
+         rel="shortcut icon"
+         href="assets/img/favicon.ico"
+         type="image/x-icon"
+      />
+      <title>zFashion - cart</title>
+      <link
+         rel="stylesheet"
+         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
+         integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
+         crossorigin="anonymous"
+         referrerpolicy="no-referrer"
+      />
+      <link rel="stylesheet" href="src/style.css" />
+   </head>
+   <body>
+      <nav id="header">
+         <a href="#"><div class="logo"></div></a>
+         <div>
+            <ul id="navbar">
+               <li><a href="index.html">Home</a></li>
+               <li><a href="shop.html">Shop</a></li>
+               <li><a href="blog.html">Blog</a></li>
+               <li><a href="about.html">About</a></li>
+               <li><a href="contact.html">Contact</a></li>
+               <li id="lg-bag">
+                  <a class="active" href="cart.html"
+                     ><i class="fa-solid fa-bag-shopping"></i
+                  ></a>
+               </li>
+               <a href="#" id="close"><i class="fas fa-times"></i></a>
+            </ul>
+         </div>
+         <div id="mobile">
+            <a href="cart.html"><i class="fa-solid fa-bag-shopping"></i></a>
+            <i id="bar" class="fas fa-outdent"></i>
+         </div>
+      </nav>
 
-    <section id="hero-cart">
-      <h2>#SacolaVaziaNãoFicaDePé</h2>
-      <p>O resumo das suas escolhas...</p>
-    </section>
+      <section id="hero-cart">
+         <h2>#SacolaVaziaNãoFicaDePé</h2>
+         <p>O resumo das suas escolhas...</p>
+      </section>
 
-    <section id="cart" class="section-p1">
-      <table width="100%">
-        <thead>
-          <tr>
-            <td>EXCLUIR</td>
-            <td>IMAGEM</td>
-            <td>PRODUTO</td>
-            <td>QUANTITADE</td>
-            <td>PREÇO</td>
-            <td>SUBTOTAL</td>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>
-              <a href="#">
-                <i class="far fa-times-circle"> </i>
-              </a>
-            </td>
-            <td><img src="assets/img/products/f1.jpg" alt="produto" id="image"></td>
-            <td><h4>Camisa floral</h4></td>
-            <td><h4>2</h4></td>
-            <td class="preco"><h4>150</h4></td>
-            <td class="subtotal"><h4>300</h4></td>
-          </tr>
-        </tbody>
-      </table>
-    </section>
+      <section id="cart" class="section-p1">
+         <table width="100%">
+            <thead>
+               <tr>
+                  <td>EXCLUIR</td>
+                  <td>IMAGEM</td>
+                  <td>PRODUTO</td>
+                  <td>QUANTITADE</td>
+                  <td>PREÇO</td>
+                  <td>SUBTOTAL</td>
+               </tr>
+            </thead>
+            <tbody>
+               <tr>
+                  <td>
+                     <a href="#">
+                        <i class="far fa-times-circle"> </i>
+                     </a>
+                  </td>
+                  <td>
+                     <img
+                        src="assets/img/products/f1.jpg"
+                        alt="produto"
+                        id="image"
+                     />
+                  </td>
+                  <td><h4>Camisa floral</h4></td>
+                  <td><h4>2</h4></td>
+                  <td class="preco"><h4>150</h4></td>
+                  <td class="subtotal"><h4>300</h4></td>
+               </tr>
+            </tbody>
+         </table>
+      </section>
 
-    <section id="footer" class="section-p1">
-      <div class="footer_container">
-        <div class="contact">
-          <h4>Contatos</h4>
-          <p><span>Edereço:</span>Av. Gaspar de Lemos - Ilha de Guaratiba</p>
-          <p><span>Telefone:</span>+5521 981302437</p>
-          <p><span>Horario:</span>10:00 - 16:00 Seg - Sab</p>
-          <h4>Siga-me</h4>
-          <ul class="social_footer">
-            <li>
-              <a href=""><i class="fa-brands fa-instagram"></i></a>
-            </li>
-            <li>
-              <a href=""><i class="fa-brands fa-github"></i></a>
-            </li>
-            <li>
-              <a href=""><i class="fa-brands fa-facebook"></i></a>
-            </li>
-            <li>
-              <a href=""><i class="fa-brands fa-linkedin"></i></a>
-            </li>
-            <li>
-              <a href=""><i class="fa-brands fa-youtube"></i></a>
-            </li>
-          </ul>
-        </div>
-        <div class="links">
-          <h4>Sobre</h4>
-          <ul>
-            <li><a href="#">Sobre nos</a></li>
-            <li><a href="#">Informações de entrega</a></li>
-            <li><a href="#">Politica de privacidade</a></li>
-            <li><a href="#">Termos e Condições</a></li>
-            <li><a href="#">Contate-nos</a></li>
-          </ul>
-        </div>
-        <div class="links">
-          <h4>Meu perfil</h4>
-          <ul>
-            <li><a href="#">Acesse</a></li>
-            <li><a href="#">Meu carrinho</a></li>
-            <li><a href="#">Meus favoridos</a></li>
-            <li><a href="#">Rastreamento pedidos</a></li>
-            <li><a href="#">Ajuda</a></li>
-          </ul>
-        </div>
-        <div class="install">
-          <h4>Instale a nossa App</h4>
-          <p>Encontra-se no App Store ou no Google Play</p>
-          <div class="stores">
-            <img src="assets/img/pay/app.jpg" alt="apple store" />
-            <img src="assets/img/pay/play.jpg" alt="google play" />
-          </div>
-          <p>Sistema de pagamento seguro</p>
-          <img src="assets/img/pay/pay.png" alt="card options" />
-        </div>
-      </div>
-      <div class="copyrights section-p1">
-        <img src="assets/img/logo.svg" alt="logo" />
-        <p>&copy; 2023 - Todos os direitos reservados</p>
-      </div>
-    </section>
-
-    <script src="script.js"></script>
-  </body>
+      <section id="footer" class="section-p1">
+         <div class="footer_container">
+            <div class="contact">
+               <h4>Contatos</h4>
+               <p>
+                  <span>Edereço:</span>Av. Gaspar de Lemos - Ilha de Guaratiba
+               </p>
+               <p><span>Telefone:</span>+5521 981302437</p>
+               <p><span>Horario:</span>10:00 - 16:00 Seg - Sab</p>
+               <h4>Siga-me</h4>
+               <ul class="social_footer">
+                  <li>
+                     <a href=""><i class="fa-brands fa-instagram"></i></a>
+                  </li>
+                  <li>
+                     <a href=""><i class="fa-brands fa-github"></i></a>
+                  </li>
+                  <li>
+                     <a href=""><i class="fa-brands fa-facebook"></i></a>
+                  </li>
+                  <li>
+                     <a href=""><i class="fa-brands fa-linkedin"></i></a>
+                  </li>
+                  <li>
+                     <a href=""><i class="fa-brands fa-youtube"></i></a>
+                  </li>
+               </ul>
+            </div>
+            <div class="links">
+               <h4>Sobre</h4>
+               <ul>
+                  <li><a href="#">Sobre nos</a></li>
+                  <li><a href="#">Informações de entrega</a></li>
+                  <li><a href="#">Politica de privacidade</a></li>
+                  <li><a href="#">Termos e Condições</a></li>
+                  <li><a href="#">Contate-nos</a></li>
+               </ul>
+            </div>
+            <div class="links">
+               <h4>Meu perfil</h4>
+               <ul>
+                  <li><a href="#">Acesse</a></li>
+                  <li><a href="#">Meu carrinho</a></li>
+                  <li><a href="#">Meus favoridos</a></li>
+                  <li><a href="#">Rastreamento pedidos</a></li>
+                  <li><a href="#">Ajuda</a></li>
+               </ul>
+            </div>
+            <div class="install">
+               <h4>Instale a nossa App</h4>
+               <p>Encontra-se no App Store ou no Google Play</p>
+               <div class="stores">
+                  <img src="assets/img/pay/app.jpg" alt="apple store" />
+                  <img src="assets/img/pay/play.jpg" alt="google play" />
+               </div>
+               <p>Sistema de pagamento seguro</p>
+               <img src="assets/img/pay/pay.png" alt="card options" />
+            </div>
+         </div>
+         <div class="copyrights section-p1">
+            <img src="assets/img/logo.svg" alt="logo" />
+            <p>&copy; 2023 - Todos os direitos reservados</p>
+         </div>
+      </section>
+   </body>
+   <script src="src/data.js"></script>
+   <script src="src/cart.js"></script>
 </html>
