--- a/about.html
+++ b/about.html
@@ -1,189 +1,202 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-    <title>zFashion - about us</title>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
-      integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <nav id="header">
-      <a href="#"><div class="logo"></div></a>
-      <div>
-        <ul id="navbar">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="shop.html">Shop</a></li>
-          <li><a href="blog.html">Blog</a></li>
-          <li><a class="active" href="about.html">About</a></li>
-          <li><a href="contact.html">Contact</a></li>
-          <li id="lg-bag">
+   <head>
+      <meta charset="UTF-8" />
+      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <link
+         rel="shortcut icon"
+         href="assets/img/favicon.ico"
+         type="image/x-icon"
+      />
+      <title>zFashion - about us</title>
+      <link
+         rel="stylesheet"
+         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
+         integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
+         crossorigin="anonymous"
+         referrerpolicy="no-referrer"
+      />
+      <link rel="stylesheet" href="src/style.css" />
+   </head>
+   <body>
+      <nav id="header">
+         <a href="#"><div class="logo"></div></a>
+         <div>
+            <ul id="navbar">
+               <li><a href="index.html">Home</a></li>
+               <li><a href="shop.html">Shop</a></li>
+               <li><a href="blog.html">Blog</a></li>
+               <li><a class="active" href="about.html">About</a></li>
+               <li><a href="contact.html">Contact</a></li>
+               <li id="lg-bag">
+                  <a href="cart.html"
+                     ><i class="fa-solid fa-bag-shopping"></i
+                  ></a>
+               </li>
+               <a href="#" id="close"><i class="fas fa-times"></i></a>
+            </ul>
+         </div>
+         <div id="mobile">
             <a href="cart.html"><i class="fa-solid fa-bag-shopping"></i></a>
-          </li>
-          <a href="#" id="close"><i class="fas fa-times"></i></a>
-        </ul>
-      </div>
-      <div id="mobile">
-        <a href="cart.html"><i class="fa-solid fa-bag-shopping"></i></a>
-        <i id="bar" class="fas fa-outdent"></i>
-      </div>
-    </nav>
+            <i id="bar" class="fas fa-outdent"></i>
+         </div>
+      </nav>
 
-    <section id="hero-about">
-      <h2>#QuemSomos</h2>
-      <p>Nosso objetivo é a sua felicidade</p>
-    </section>
-
-    <section id="about-head" class="section-p1">
-      <div class="about-img">
-        <img src="assets/img/about/a6.jpg" alt="digital art" />
-      </div>
-      <div class="about-des">
-        <h2>Quem Somos</h2>
-        <p>
-          Nosso objetivo é fornecer a você a melhor experiência de compra
-          on-line possível. Desde a navegação fácil em nosso site até a entrega
-          rápida e eficiente, queremos que você se sinta satisfeito em todos os
-          aspectos. Nós nos esforçamos para oferecer as últimas tendências e
-          estilos de moda, garantindo que nossos produtos sejam de alta
-          qualidade e a preços acessíveis. Estamos constantemente atualizando
-          nosso estoque para atender às suas necessidades e desejos.
-        </p>
-        <abbr title="">
-            Acreditamos que todos merecem se sentir bem consigo mesmos,
-          independentemente de sua idade, tamanho ou orçamento.
-          </abbr>
-          <br><br>
-          <marquee id="sliding-text" scrollamount="5">Obrigado por escolher nosso e-commerce de vestuário - estamos aqui para você.</marquee>
-      </div>
-    </section>
-
-    <section id="about-app" class="section-p1">
-        <h1>Instale Nosso <a href="">App</a></h1>
-        <div class="about-video">
-                    <video autoplay muted loop src="assets/img/about/1.mp4"></video>
-        </div>
-    </section>
-
-    <section id="feature" class="section-p1">
-        <div class="fe-box">
-          <img src="assets/img/features/f1.png" alt="free shipping" />
-          <h6>Entrega gratuita</h6>
-        </div>
-        <div class="fe-box">
-          <img src="assets/img/features/f2.png" alt="free shipping" />
-          <h6>Pedido online</h6>
-        </div>
-        <div class="fe-box">
-          <img src="assets/img/features/f3.png" alt="free shipping" />
-          <h6>Economize dinheiro</h6>
-        </div>
-        <div class="fe-box">
-          <img src="assets/img/features/f4.png" alt="free shipping" />
-          <h6>Promoções</h6>
-        </div>
-        <div class="fe-box">
-          <img src="assets/img/features/f5.png" alt="free shipping" />
-          <h6>Venda feliz</h6>
-        </div>
-        <div class="fe-box">
-          <img src="assets/img/features/f6.png" alt="free shipping" />
-          <h6>Suporte 24/7</h6>
-        </div>
+      <section id="hero-about">
+         <h2>#QuemSomos</h2>
+         <p>Nosso objetivo é a sua felicidade</p>
       </section>
-  
-      <section id="newsletter">
-        <div class="newsletter-container">
-          <div>
-            <h3>Fique por dentro das novidades</h3>
+
+      <section id="about-head" class="section-p1">
+         <div class="about-img">
+            <img src="assets/img/about/a6.jpg" alt="digital art" />
+         </div>
+         <div class="about-des">
+            <h2>Quem Somos</h2>
             <p>
-              Receba emails sobre as novidades e <span>ofertas especiais.</span>
+               Nosso objetivo é fornecer a você a melhor experiência de compra
+               on-line possível. Desde a navegação fácil em nosso site até a
+               entrega rápida e eficiente, queremos que você se sinta satisfeito
+               em todos os aspectos. Nós nos esforçamos para oferecer as últimas
+               tendências e estilos de moda, garantindo que nossos produtos
+               sejam de alta qualidade e a preços acessíveis. Estamos
+               constantemente atualizando nosso estoque para atender às suas
+               necessidades e desejos.
             </p>
-          </div>
-          <div class="form">
-            <input
-              type="email"
-              name="email"
-              id="newsletter_mail"
-              placeholder="Seu melhor endereço mail..."
-              autocomplete="off"
-            />
-            <button>Inscriva-se</button>
-          </div>
-        </div>
-      </section>  
+            <abbr title="">
+               Acreditamos que todos merecem se sentir bem consigo mesmos,
+               independentemente de sua idade, tamanho ou orçamento.
+            </abbr>
+            <br /><br />
+            <marquee id="sliding-text" scrollamount="5"
+               >Obrigado por escolher nosso e-commerce de vestuário - estamos
+               aqui para você.</marquee
+            >
+         </div>
+      </section>
 
-    <section id="footer" class="section-p1">
-      <div class="footer_container">
-        <div class="contact">
-          <h4>Contatos</h4>
-          <p><span>Edereço:</span>Av. Gaspar de Lemos - Ilha de Guaratiba</p>
-          <p><span>Telefone:</span>+5521 981302437</p>
-          <p><span>Horario:</span>10:00 - 16:00 Seg - Sab</p>
-          <h4>Siga-me</h4>
-          <ul class="social_footer">
-            <li>
-              <a href=""><i class="fa-brands fa-instagram"></i></a>
-            </li>
-            <li>
-              <a href=""><i class="fa-brands fa-github"></i></a>
-            </li>
-            <li>
-              <a href=""><i class="fa-brands fa-facebook"></i></a>
-            </li>
-            <li>
-              <a href=""><i class="fa-brands fa-linkedin"></i></a>
-            </li>
-            <li>
-              <a href=""><i class="fa-brands fa-youtube"></i></a>
-            </li>
-          </ul>
-        </div>
-        <div class="links">
-          <h4>Sobre</h4>
-          <ul>
-            <li><a href="#">Sobre nos</a></li>
-            <li><a href="#">Informações de entrega</a></li>
-            <li><a href="#">Politica de privacidade</a></li>
-            <li><a href="#">Termos e Condições</a></li>
-            <li><a href="#">Contate-nos</a></li>
-          </ul>
-        </div>
-        <div class="links">
-          <h4>Meu perfil</h4>
-          <ul>
-            <li><a href="#">Acesse</a></li>
-            <li><a href="#">Meu carrinho</a></li>
-            <li><a href="#">Meus favoridos</a></li>
-            <li><a href="#">Rastreamento pedidos</a></li>
-            <li><a href="#">Ajuda</a></li>
-          </ul>
-        </div>
-        <div class="install">
-          <h4>Instale a nossa App</h4>
-          <p>Encontra-se no App Store ou no Google Play</p>
-          <div class="stores">
-            <img src="assets/img/pay/app.jpg" alt="apple store" />
-            <img src="assets/img/pay/play.jpg" alt="google play" />
-          </div>
-          <p>Sistema de pagamento seguro</p>
-          <img src="assets/img/pay/pay.png" alt="card options" />
-        </div>
-      </div>
-      <div class="copyrights section-p1">
-        <img src="assets/img/logo.svg" alt="logo" />
-        <p>&copy; 2023 - Todos os direitos reservados</p>
-      </div>
-    </section>
+      <section id="about-app" class="section-p1">
+         <h1>Instale Nosso <a href="">App</a></h1>
+         <div class="about-video">
+            <video autoplay muted loop src="assets/img/about/1.mp4"></video>
+         </div>
+      </section>
 
-    <script src="script.js"></script>
-  </body>
+      <section id="feature" class="section-p1">
+         <div class="fe-box">
+            <img src="assets/img/features/f1.png" alt="free shipping" />
+            <h6>Entrega gratuita</h6>
+         </div>
+         <div class="fe-box">
+            <img src="assets/img/features/f2.png" alt="free shipping" />
+            <h6>Pedido online</h6>
+         </div>
+         <div class="fe-box">
+            <img src="assets/img/features/f3.png" alt="free shipping" />
+            <h6>Economize dinheiro</h6>
+         </div>
+         <div class="fe-box">
+            <img src="assets/img/features/f4.png" alt="free shipping" />
+            <h6>Promoções</h6>
+         </div>
+         <div class="fe-box">
+            <img src="assets/img/features/f5.png" alt="free shipping" />
+            <h6>Venda feliz</h6>
+         </div>
+         <div class="fe-box">
+            <img src="assets/img/features/f6.png" alt="free shipping" />
+            <h6>Suporte 24/7</h6>
+         </div>
+      </section>
+
+      <section id="newsletter">
+         <div class="newsletter-container">
+            <div>
+               <h3>Fique por dentro das novidades</h3>
+               <p>
+                  Receba emails sobre as novidades e
+                  <span>ofertas especiais.</span>
+               </p>
+            </div>
+            <div class="form">
+               <input
+                  type="email"
+                  name="email"
+                  id="newsletter_mail"
+                  placeholder="Seu melhor endereço mail..."
+                  autocomplete="off"
+               />
+               <button>Inscriva-se</button>
+            </div>
+         </div>
+      </section>
+
+      <section id="footer" class="section-p1">
+         <div class="footer_container">
+            <div class="contact">
+               <h4>Contatos</h4>
+               <p>
+                  <span>Edereço:</span>Av. Gaspar de Lemos - Ilha de Guaratiba
+               </p>
+               <p><span>Telefone:</span>+5521 981302437</p>
+               <p><span>Horario:</span>10:00 - 16:00 Seg - Sab</p>
+               <h4>Siga-me</h4>
+               <ul class="social_footer">
+                  <li>
+                     <a href=""><i class="fa-brands fa-instagram"></i></a>
+                  </li>
+                  <li>
+                     <a href=""><i class="fa-brands fa-github"></i></a>
+                  </li>
+                  <li>
+                     <a href=""><i class="fa-brands fa-facebook"></i></a>
+                  </li>
+                  <li>
+                     <a href=""><i class="fa-brands fa-linkedin"></i></a>
+                  </li>
+                  <li>
+                     <a href=""><i class="fa-brands fa-youtube"></i></a>
+                  </li>
+               </ul>
+            </div>
+            <div class="links">
+               <h4>Sobre</h4>
+               <ul>
+                  <li><a href="#">Sobre nos</a></li>
+                  <li><a href="#">Informações de entrega</a></li>
+                  <li><a href="#">Politica de privacidade</a></li>
+                  <li><a href="#">Termos e Condições</a></li>
+                  <li><a href="#">Contate-nos</a></li>
+               </ul>
+            </div>
+            <div class="links">
+               <h4>Meu perfil</h4>
+               <ul>
+                  <li><a href="#">Acesse</a></li>
+                  <li><a href="#">Meu carrinho</a></li>
+                  <li><a href="#">Meus favoridos</a></li>
+                  <li><a href="#">Rastreamento pedidos</a></li>
+                  <li><a href="#">Ajuda</a></li>
+               </ul>
+            </div>
+            <div class="install">
+               <h4>Instale a nossa App</h4>
+               <p>Encontra-se no App Store ou no Google Play</p>
+               <div class="stores">
+                  <img src="assets/img/pay/app.jpg" alt="apple store" />
+                  <img src="assets/img/pay/play.jpg" alt="google play" />
+               </div>
+               <p>Sistema de pagamento seguro</p>
+               <img src="assets/img/pay/pay.png" alt="card options" />
+            </div>
+         </div>
+         <div class="copyrights section-p1">
+            <img src="assets/img/logo.svg" alt="logo" />
+            <p>&copy; 2023 - Todos os direitos reservados</p>
+         </div>
+      </section>
+
+      <script src="src/script.js"></script>
+   </body>
 </html>
