--- a/contact.html
+++ b/contact.html
@@ -1,163 +1,192 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-    <title>zFashion - contact</title>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
-      integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <nav id="header">
-      <a href="#"><div class="logo"></div></a>
-      <div>
-        <ul id="navbar">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="shop.html">Shop</a></li>
-          <li><a href="blog.html">Blog</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a class="active" href="contact.html">Contact</a></li>
-          <li id="lg-bag">
+   <head>
+      <meta charset="UTF-8" />
+      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <link
+         rel="shortcut icon"
+         href="assets/img/favicon.ico"
+         type="image/x-icon"
+      />
+      <title>zFashion - contact</title>
+      <link
+         rel="stylesheet"
+         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
+         integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
+         crossorigin="anonymous"
+         referrerpolicy="no-referrer"
+      />
+      <link rel="stylesheet" href="src/style.css" />
+   </head>
+   <body>
+      <nav id="header">
+         <a href="#"><div class="logo"></div></a>
+         <div>
+            <ul id="navbar">
+               <li><a href="index.html">Home</a></li>
+               <li><a href="shop.html">Shop</a></li>
+               <li><a href="blog.html">Blog</a></li>
+               <li><a href="about.html">About</a></li>
+               <li><a class="active" href="contact.html">Contact</a></li>
+               <li id="lg-bag">
+                  <a href="cart.html"
+                     ><i class="fa-solid fa-bag-shopping"></i
+                  ></a>
+               </li>
+               <a href="#" id="close"><i class="fas fa-times"></i></a>
+            </ul>
+         </div>
+         <div id="mobile">
             <a href="cart.html"><i class="fa-solid fa-bag-shopping"></i></a>
-          </li>
-          <a href="#" id="close"><i class="fas fa-times"></i></a>
-        </ul>
-      </div>
-      <div id="mobile">
-        <a href="cart.html"><i class="fa-solid fa-bag-shopping"></i></a>
-        <i id="bar" class="fas fa-outdent"></i>
-      </div>
-    </nav>
+            <i id="bar" class="fas fa-outdent"></i>
+         </div>
+      </nav>
 
-    <section id="hero-contact">
-      <h2>#FaleConosco</h2>
-      <p>Vamos resolver qualquer duvida</p>
-    </section>
+      <section id="hero-contact">
+         <h2>#FaleConosco</h2>
+         <p>Vamos resolver qualquer duvida</p>
+      </section>
 
-    <section id="contact" class="section-p1">
-      <div class="contact-info">
-        <h6>ENTRE EM CONTATO</h6>
-        <h3>Visite uma das nossas lojas</h3>
-        <h5>Matriz</h5>
-        <div class="info">
-          <i class="fas fa-map"> </i>
-          <p>Av. Gaspar de Lemos - Guaratiba</p>
-        </div>
-        <div class="info">
-          <i class="fas fa-envelope"></i>
-          <p>zeta.designer.rj@gmail.com</p>
-        </div>
-        <div class="info">
-          <i class="fas fa-phone"></i>
-          <p>+5521 98130-2437</p>
-        </div>
-        <div class="info">
-          <i class="fas fa-clock"></i>
-          <p>Seg. a Sex. - 9:00 as 16:00</p>
-        </div>
-      </div>
-      <div class="contact-map">
-        <iframe
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3672.3905722731097!2d-43.54208958536967!3d-23.009427347325442!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9be895a436c133%3A0xeed9165ed06c23cd!2sIlha%20Guaratiba!5e0!3m2!1sen!2sbr!4v1680521327290!5m2!1sen!2sbr"
-         
-          style="border: 0"
-          allowfullscreen=""
-          loading="lazy"
-          referrerpolicy="no-referrer-when-downgrade"
-        ></iframe>
-      </div>
-    </section>
+      <section id="contact" class="section-p1">
+         <div class="contact-info">
+            <h6>ENTRE EM CONTATO</h6>
+            <h3>Visite uma das nossas lojas</h3>
+            <h5>Matriz</h5>
+            <div class="info">
+               <i class="fas fa-map"> </i>
+               <p>Av. Gaspar de Lemos - Guaratiba</p>
+            </div>
+            <div class="info">
+               <i class="fas fa-envelope"></i>
+               <p>zeta.designer.rj@gmail.com</p>
+            </div>
+            <div class="info">
+               <i class="fas fa-phone"></i>
+               <p>+5521 98130-2437</p>
+            </div>
+            <div class="info">
+               <i class="fas fa-clock"></i>
+               <p>Seg. a Sex. - 9:00 as 16:00</p>
+            </div>
+         </div>
+         <div class="contact-map">
+            <iframe
+               src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3672.3905722731097!2d-43.54208958536967!3d-23.009427347325442!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9be895a436c133%3A0xeed9165ed06c23cd!2sIlha%20Guaratiba!5e0!3m2!1sen!2sbr!4v1680521327290!5m2!1sen!2sbr"
+               style="border: 0"
+               allowfullscreen=""
+               loading="lazy"
+               referrerpolicy="no-referrer-when-downgrade"
+            ></iframe>
+         </div>
+      </section>
 
-    <section id="form-details" class="section-p1">
-        <form action="" autocomplete="off">
+      <section id="form-details" class="section-p1">
+         <form action="" autocomplete="off">
             <span>ESCREVA UMA MENSAGEM</span>
             <h2>Gostariamos de saber a sua opinião</h2>
-            <input type="text" name="name" id="name" placeholder="Seu nome completo..." >
-            <input type="text" name="email" id="email" placeholder="Seu melhor email..." >
-            <input type="text" name="subject" id="subject" placeholder="Assunto..." >
-            <textarea name="message" id="message" cols="30" rows="10" placeholder="Sua mensagem..." ></textarea>
+            <input
+               type="text"
+               name="name"
+               id="name"
+               placeholder="Seu nome completo..."
+            />
+            <input
+               type="text"
+               name="email"
+               id="email"
+               placeholder="Seu melhor email..."
+            />
+            <input
+               type="text"
+               name="subject"
+               id="subject"
+               placeholder="Assunto..."
+            />
+            <textarea
+               name="message"
+               id="message"
+               cols="30"
+               rows="10"
+               placeholder="Sua mensagem..."
+            ></textarea>
             <button class="normal">Enviar</button>
-        </form>
-        <div class="people">
+         </form>
+         <div class="people">
             <div class="person">
-                <img src="assets/img/people/paolo.jpg" alt="mine photo">
-                <p><span>Pierpaolo Zotti</span>ZETA's owner & founder 
-                    <br> +5521 98130.2437<br>zeta.designer.rj@gmail.com
-                </p>
+               <img src="assets/img/people/paolo.jpg" alt="mine photo" />
+               <p>
+                  <span>Pierpaolo Zotti</span>ZETA's owner & founder <br />
+                  +5521 98130.2437<br />zeta.designer.rj@gmail.com
+               </p>
             </div>
-        </div>
-    </section>
-    <section id="footer" class="section-p1">
-      <div class="footer_container">
-        <div class="contact">
-          <h4>Contatos</h4>
-          <p><span>Edereço:</span>Av. Gaspar de Lemos - Ilha de Guaratiba</p>
-          <p><span>Telefone:</span>+5521 981302437</p>
-          <p><span>Horario:</span>10:00 - 16:00 Seg - Sab</p>
-          <h4>Siga-me</h4>
-          <ul class="social_footer">
-            <li>
-              <a href=""><i class="fa-brands fa-instagram"></i></a>
-            </li>
-            <li>
-              <a href=""><i class="fa-brands fa-github"></i></a>
-            </li>
-            <li>
-              <a href=""><i class="fa-brands fa-facebook"></i></a>
-            </li>
-            <li>
-              <a href=""><i class="fa-brands fa-linkedin"></i></a>
-            </li>
-            <li>
-              <a href=""><i class="fa-brands fa-youtube"></i></a>
-            </li>
-          </ul>
-        </div>
-        <div class="links">
-          <h4>Sobre</h4>
-          <ul>
-            <li><a href="#">Sobre nos</a></li>
-            <li><a href="#">Informações de entrega</a></li>
-            <li><a href="#">Politica de privacidade</a></li>
-            <li><a href="#">Termos e Condições</a></li>
-            <li><a href="#">Contate-nos</a></li>
-          </ul>
-        </div>
-        <div class="links">
-          <h4>Meu perfil</h4>
-          <ul>
-            <li><a href="#">Acesse</a></li>
-            <li><a href="#">Meu carrinho</a></li>
-            <li><a href="#">Meus favoridos</a></li>
-            <li><a href="#">Rastreamento pedidos</a></li>
-            <li><a href="#">Ajuda</a></li>
-          </ul>
-        </div>
-        <div class="install">
-          <h4>Instale a nossa App</h4>
-          <p>Encontra-se no App Store ou no Google Play</p>
-          <div class="stores">
-            <img src="assets/img/pay/app.jpg" alt="apple store" />
-            <img src="assets/img/pay/play.jpg" alt="google play" />
-          </div>
-          <p>Sistema de pagamento seguro</p>
-          <img src="assets/img/pay/pay.png" alt="card options" />
-        </div>
-      </div>
-      <div class="copyrights section-p1">
-        <img src="assets/img/logo.svg" alt="logo" />
-        <p>&copy; 2023 - Todos os direitos reservados</p>
-      </div>
-    </section>
+         </div>
+      </section>
+      <section id="footer" class="section-p1">
+         <div class="footer_container">
+            <div class="contact">
+               <h4>Contatos</h4>
+               <p>
+                  <span>Edereço:</span>Av. Gaspar de Lemos - Ilha de Guaratiba
+               </p>
+               <p><span>Telefone:</span>+5521 981302437</p>
+               <p><span>Horario:</span>10:00 - 16:00 Seg - Sab</p>
+               <h4>Siga-me</h4>
+               <ul class="social_footer">
+                  <li>
+                     <a href=""><i class="fa-brands fa-instagram"></i></a>
+                  </li>
+                  <li>
+                     <a href=""><i class="fa-brands fa-github"></i></a>
+                  </li>
+                  <li>
+                     <a href=""><i class="fa-brands fa-facebook"></i></a>
+                  </li>
+                  <li>
+                     <a href=""><i class="fa-brands fa-linkedin"></i></a>
+                  </li>
+                  <li>
+                     <a href=""><i class="fa-brands fa-youtube"></i></a>
+                  </li>
+               </ul>
+            </div>
+            <div class="links">
+               <h4>Sobre</h4>
+               <ul>
+                  <li><a href="#">Sobre nos</a></li>
+                  <li><a href="#">Informações de entrega</a></li>
+                  <li><a href="#">Politica de privacidade</a></li>
+                  <li><a href="#">Termos e Condições</a></li>
+                  <li><a href="#">Contate-nos</a></li>
+               </ul>
+            </div>
+            <div class="links">
+               <h4>Meu perfil</h4>
+               <ul>
+                  <li><a href="#">Acesse</a></li>
+                  <li><a href="#">Meu carrinho</a></li>
+                  <li><a href="#">Meus favoridos</a></li>
+                  <li><a href="#">Rastreamento pedidos</a></li>
+                  <li><a href="#">Ajuda</a></li>
+               </ul>
+            </div>
+            <div class="install">
+               <h4>Instale a nossa App</h4>
+               <p>Encontra-se no App Store ou no Google Play</p>
+               <div class="stores">
+                  <img src="assets/img/pay/app.jpg" alt="apple store" />
+                  <img src="assets/img/pay/play.jpg" alt="google play" />
+               </div>
+               <p>Sistema de pagamento seguro</p>
+               <img src="assets/img/pay/pay.png" alt="card options" />
+            </div>
+         </div>
+         <div class="copyrights section-p1">
+            <img src="assets/img/logo.svg" alt="logo" />
+            <p>&copy; 2023 - Todos os direitos reservados</p>
+         </div>
+      </section>
 
-    <script src="script.js"></script>
-  </body>
+      <script src="src/script.js"></script>
+   </body>
 </html>
