some modified files

--- a/cart.html
+++ b/cart.html
@@ -60,7 +60,7 @@
                   <td>SUBTOTAL</td>
                </tr>
             </thead>
-            <tbody>
+            <tbody id="table">
                <tr>
                   <td>
                      <a href="#">
