--- a/cart.html
+++ b/cart.html
@@ -21,7 +21,7 @@
    </head>
    <body>
       <nav id="header">
-         <a href="#"><div class="logo"></div></a>
+         <a href="index.html"><div class="logo"></div></a>
          <div>
             <ul id="navbar">
                <li><a href="index.html">Home</a></li>
@@ -33,12 +33,16 @@
                   <a class="active" href="cart.html"
                      ><i class="fa-solid fa-bag-shopping"></i
                   ></a>
+                  <div id="cartAmount" class="cartAmount shown">0</div>
                </li>
                <a href="#" id="close"><i class="fas fa-times"></i></a>
             </ul>
          </div>
          <div id="mobile">
-            <a href="cart.html"><i class="fa-solid fa-bag-shopping"></i></a>
+            <div class="mobileCartAmount">
+               <a href="cart.html"><i class="fa-solid fa-bag-shopping"></i></a>
+               <div id="mobileCartAmount" class="cartAmount shown">0</div>
+            </div>
             <i id="bar" class="fas fa-outdent"></i>
          </div>
       </nav>
@@ -60,29 +64,11 @@
                   <td>SUBTOTAL</td>
                </tr>
             </thead>
-            <tbody id="table">
-               <tr>
-                  <td>
-                     <a href="#">
-                        <i class="far fa-times-circle"> </i>
-                     </a>
-                  </td>
-                  <td>
-                     <img
-                        src="assets/img/products/f1.jpg"
-                        alt="produto"
-                        id="image"
-                     />
-                  </td>
-                  <td><h4>Camisa floral</h4></td>
-                  <td><h4>2</h4></td>
-                  <td class="preco"><h4>150</h4></td>
-                  <td class="subtotal"><h4>300</h4></td>
-               </tr>
-            </tbody>
+            <tbody id="table"></tbody>
+            <tfoot id="tableFooter"></tfoot>
          </table>
       </section>
-
+      <div id="resume" class="resume"></div>
       <section id="footer" class="section-p1">
          <div class="footer_container">
             <div class="contact">
